@@ -4,15 +4,19 @@
 
 program = 'vdifd'
 author  = 'Walter Brisken'
-version = '0.5'
-verdate = '20191110'
+version = '0.6'
+verdate = '20210417'
 
 from os import system
 from sys import exit, argv
 
+def printVersion():
+	print('%s ver. %s  %s  %s' % (program, version, author, verdate))
 
 def usage():
-	print('\n%s ver. %s  %s  %s\n' % (program, version, author, verdate))
+	print('')
+	printVersion()
+	print('')
 	print('A VDIF decoder for multi-thread, single channel VDIF data.  Uses vmux')
 	print('and m5d to do the heavy lifting.\n')
 	print('Usage : %s <infile> <frame size> <data rate> <threadlist> <n> [<offset> [<nbit>] ]\n' % program)
@@ -23,6 +27,10 @@ def usage():
 	print('  <offset> optionally jump into input file by this many bytes\n')
 	print('  <nbit> is number of bits per sample (default is 2)\n')
 	print('Note: Only works on 2-bit real data for now...\n')
+
+if '--version' in argv:
+	printVersion()
+	exit()
 
 if len(argv) < 6:
 	usage()
